<resources>
    <string name="app_name">OzoDraw</string>

    <string name="menu_color">Color</string>
    <string name="menu_erase">Rubber</string>
    <string name="menu_new">Clear</string>
    <string name="menu_save">Save</string>
    <string name="menu_color_black">Black</string>
    <string name="menu_color_blue">Blue</string>
    <string name="menu_color_green">Green</string>
    <string name="menu_color_red">Red</string>
    <string name="menu_command">Commands</string>

    <string name="title_activity_commands">Commands</string>
    <string name="title_speed">Speed</string>
    <string name="title_direction">Direction</string>
    <string name="title_moves">Moves</string>

    <string name="command_speed_slow">Slow</string>
    <string name="command_speed_cruise">Cruise</string>
    <string name="command_speed_fast">Fast</string>
    <string name="command_speed_turbo">Turbo</string>
    <string name="command_speed_snail">Snail 3 sec.</string>
    <string name="command_speed_nitro">Nitro 3 sec.</string>
    <string name="command_speed_pause">3 seconds pause</string>
    <string name="command_direction_straight">Go straight</string>
    <string name="command_direction_right">Go right</string>
    <string name="command_direction_left">Go left</string>
    <string name="command_direction_u_turn">U-turn</string>
    <string name="command_direction_jump_straight">Jump straight</string>
    <string name="command_direction_jump_right">Jump right</string>
    <string name="command_direction_jump_left">Jump left</string>
    <string name="menu_stroke_width">Stroke width</string>
    <string name="stroke_width_dialog_title">Set stroke width</string>
</resources>
